22/03/2024: clients added 23/03/2024: clients updated

--- a/payment_processor_service/src/main/resources/application.properties
+++ b/payment_processor_service/src/main/resources/application.properties
@@ -2,9 +2,11 @@ mp.messaging.incoming.requests.queue.name=payments-requests
 mp.messaging.incoming.requests.exchange.name=payments-requests
 
 mp.messaging.outgoing.payments.exchange.name=payments
+mp.messaging.outgoing.payments.exchange.type=fanout
+mp.messaging.outgoing.payments.queue.x-queue-type=stream
 
 # RabbitMQ configuration
-rabbitmq-host=localhost
+rabbitmq-host=${RABBITMQ_HOST}
 rabbitmq-port=5672
 rabbitmq-username=guest
 rabbitmq-password=guest
