--- a/payment_request_service/src/main/resources/application.properties
+++ b/payment_request_service/src/main/resources/application.properties
@@ -1,12 +1,11 @@
+# Exchange name for incoming requests
 mp.messaging.outgoing.requests.exchange.name=payments-requests
 
-mp.messaging.incoming.payments.queue.name=payments
-mp.messaging.incoming.payments.exchange.name=payments
-
 # RabbitMQ configuration
-rabbitmq-host=localhost
+rabbitmq-host=${RABBITMQ_HOST}
 rabbitmq-port=5672
 rabbitmq-username=guest
 rabbitmq-password=guest
 
+# Quarkus configuration
 quarkus.http.port=8080
